Portfolio and Blog

--- a/Home.html
+++ b/Home.html
@@ -26,10 +26,10 @@
                         <a href="#resume">Resume</a>
                     </li>
                     <li>
-                        <a href="#portforio">Portforio</a>
+                        <a href="Portfolio.html">Portforio</a>
                     </li>
                     <li>
-                        <a href="#blog">Blog</a>
+                        <a href="Blog.html">Blog</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
