--- a/about.html
+++ b/about.html
@@ -22,16 +22,16 @@
                         <a href="Home.html">Home</a>
                     </li>
                     <li class="active">
-                        <a href="#about_me">About me</a>
+                        <a href="about.html">About me</a>
                     </li>
                     <li>
                         <a href="#resume">Resume</a>
                     </li>
                     <li>
-                        <a href="#portforio">Portforio</a>
+                        <a href="Portfolio.html">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#blog">Blog</a>
+                        <a href="Blog.html">Blog</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
